--- a/frontend/03-flexdesign.css
+++ b/frontend/03-flexdesign.css
@@ -3,9 +3,8 @@
       display: flex; 
       justify-content: space-between; 
       align-items: flex-start; 
-      gap: 30px; 
       margin-bottom: 60px; 
-
+      padding: 0 40px;
     } 
 
 
